# quote-server

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
backend/: Cargo.toml
backend/sql/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
backend/src/: error.rs  main.rs
backend/src/model/: db.rs  mod.rs  quote.rs  todo.rs
backend/src/security/: mod.rs
backend/src/tests/: model_db.rs  model_quote.rs  model_todo.rs  quick_dev.rs  web_quote.rs  web_todo.rs
backend/src/web/: mod.rs  mw_auth.rs  quote.rs  routes_login.rs  routes_tickets.rs  todo.rs
backend/templates/: hello.html
cookie_test/: cookie.js  test.html
frontend/: package-lock.json  package.json
frontend/src/: main.ts
frontend/src/model/: quote-mco.ts  todo-mco.ts
frontend/src/ui/: quote-mvc.ts  todo-mvc.ts
frontend/web-folder/: index.html  styles.css
frontend/web-folder/js/: app-bundle.js  app-bundle.js.map
src/: ctx.rs  error.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
templates/: hello.html
tests/: quick_dev.rs
