[package]
name = "with-axum-htmx-askama"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
axum = { version = "0.6", features = ["macros"]}
httpc-test = "0.1.10"
lazy-regex = "2"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
sqlx = "0.8.5"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
