[package]
name = "with-axum-htmx-askama"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
async-trait = "0.1"
axum = { version = "0.6", features = ["macros"]}
futures = "0.3"
httpc-test = "0.1.10"
lazy-regex = "2"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_derive = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
sqlb = "0.0.8"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

